src/objects/RelatedAdditionalCaseOpportunity__c.object
<CustomObject>
    <description>SFDC1-156: This is a junction object between additional case field and opportunities.</description>
    <fields>
        <fullName>AdditionalCaseFields__c</fullName>
        <description>SFDC1-156: This field points to additional case fields in this junction object</description>
        <label>Additional Case Fields</label>
        <referenceTo>AdditionalCaseFields__c</referenceTo>
        <relationshipLabel>Related Additional Case Opportunities</relationshipLabel>
        <relationshipName>RelatedAdditionalCaseOpportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <description>SFDC1-156: Display the name of opportunity this record is pointing to</description>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-156: This field points to Opportunity object in this junction object</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Additional Case Opportunities</relationshipLabel>
        <relationshipName>RelatedAdditionalCaseOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKIDRelAddCaseOpp__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>RCO{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID RelAddCaseOpp</label>
        <type>AutoNumber</type>
    </fields>
    <label>Related Additional Case Opportunity</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Related Additional Case Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Additional Case Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>